tools/tests/ui/fail/l1019.cnf
// Test file for error code: L1019
// Expected error: Invalid Expected character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
